// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.content - value[0] 1`] = `
<header
  class="ant-layout-header emotion-0 hide-on-print"
  id="areas.content"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</header>
`;

exports[`Render default - value[0] 1`] = `
<header
  class="ant-layout-header emotion-0 hide-on-print"
  id="default"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</header>
`;

exports[`Render properties.style - value[0] 1`] = `
.emotion-0 {
  border: 1px solid blue;
}

<header
  class="ant-layout-header emotion-0 hide-on-print"
  id="properties.style"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</header>
`;

exports[`Render properties.theme-dark - value[0] 1`] = `
<header
  class="ant-layout-header emotion-0 hide-on-print"
  id="properties.theme-dark"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</header>
`;

exports[`Render properties.theme-light - value[0] 1`] = `
.emotion-0 {
  background-color: #fff;
}

<header
  class="ant-layout-header emotion-0 hide-on-print"
  id="properties.theme-light"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</header>
`;

exports[`Render required = true areas.content - value[0] 1`] = `
<header
  class="ant-layout-header emotion-0 hide-on-print"
  id="areas.content"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</header>
`;

exports[`Render required = true default - value[0] 1`] = `
<header
  class="ant-layout-header emotion-0 hide-on-print"
  id="default"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</header>
`;

exports[`Render required = true properties.style - value[0] 1`] = `
.emotion-0 {
  border: 1px solid blue;
}

<header
  class="ant-layout-header emotion-0 hide-on-print"
  id="properties.style"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</header>
`;

exports[`Render required = true properties.theme-dark - value[0] 1`] = `
<header
  class="ant-layout-header emotion-0 hide-on-print"
  id="properties.theme-dark"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</header>
`;

exports[`Render required = true properties.theme-light - value[0] 1`] = `
.emotion-0 {
  background-color: #fff;
}

<header
  class="ant-layout-header emotion-0 hide-on-print"
  id="properties.theme-light"
>
  <div
    data-testid="area-content"
    style="border: 1px solid red; padding: 10px;"
  >
    content
  </div>
</header>
`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;

exports[`Test Schema properties.theme-dark 1`] = `true`;

exports[`Test Schema properties.theme-dark 2`] = `null`;

exports[`Test Schema properties.theme-light 1`] = `true`;

exports[`Test Schema properties.theme-light 2`] = `null`;
